# fast-mnist-nn

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  model.weights
.claude/: settings.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_regression.yml  rfc.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  fuzzing.yml  gitleaks.yml  release.yml  sanitizers.yml  scorecard.yml  wasm.yml
apps/: export_weights.cpp  fast_mnist_cli.cpp  server.cpp  test_model.cpp  train_model.cpp
benchmarks/: bench_matrix.cpp
docs/: WASM.md
docs/adr/: 0001-hand-rolled-simd-over-bundled-blas.md  0002-two-layer-mlp-not-generic-graph.md  0003-separate-server-and-frontend-not-monorepo-ssr.md
docs/benchmarks/: bench_env.md  bench_summary.csv  benchmarks.md
docs/benchmarks/runs/: bench-20251226-154121-baseline.json  bench-20251226-154121-native.json  bench-20251226-154121-openmp-native.json
docs/linkedin/dot-light.svg.qlpreview/: Preview.url  PreviewProperties.plist
fuzz/: matrix_stream_fuzzer.cpp
include/fast_mnist/: Matrix.h  NeuralNet.h
scripts/: bench.sh
src/: Matrix.cpp  NeuralNet.cpp
tests/: test_matrix.cpp  test_matrix_properties.cpp  test_neural_net.cpp
tools/: bootstrap_macos.sh  build_wasm.sh  prepare_mnist.py  requirements-bootstrap.txt  run.py  run_benchmarks.py
wasm/: wasm_bindings.cpp
web/: .env.example  .gitignore  .prettierignore  README.md  commitlint.config.mjs  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/.husky/: commit-msg
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/api/: predict.ts
web/src/components/: ActivationPanels.tsx  CommandPalette.tsx  DrawingCanvas.tsx  HeroBackdrop.tsx  HiddenHeatmap.tsx  NeuralNetHero.Layers.tsx  NeuralNetHero.Scene.tsx  NeuralNetHero.glass.tsx  NeuralNetHero.tsx  NeuralNetViz.tsx  PipelineCard.tsx  PipelineShowcase.tsx  PredictionResult.tsx  SaliencyPanel.tsx  ScrollProgress.tsx  SoftmaxBars.tsx  ThemeToggle.tsx  sampleDigits.ts  strokeReducer.ts
web/src/hooks/: useDebounce.ts  useReducedMotion.ts  useTheme.ts
web/src/lib/: ease.ts  fonts.ts  jsFallbackClassifier.ts  layout.ts  springs.ts  theme.ts  three-preload.ts  wasmClassifier.ts
web/tests/e2e/: demo.spec.ts
